# controllers/Parties_Management_Controllers/sh_events_management_controller.js
@@ -35,7 +35,7 @@ exports.sh_create_event_controller = async (req, res, next) => {
 
         if (!customerInformation) {
             const error = new Error("Customer information not found")
-            error.code = 401
+            error.code = 404
             throw error
         }
 
@@ -117,7 +117,7 @@ exports.sh_create_event_location_information_controller = async function (req, r
 
         if (!eventInformation) {
             const error = new Error("Event information not found")
-            error.code = 401
+            error.code = 404
             throw error
         }
 
@@ -177,7 +177,7 @@ exports.sh_create_event_members_controller = async function (req, res, next) {
     } = req.body;
 
     try {
-        if(!req.isAuth){
+        if (!req.isAuth) {
             const error = new Error("Unauthorised access, Login to continue")
             error.code = 401
             throw error
@@ -189,9 +189,9 @@ exports.sh_create_event_members_controller = async function (req, res, next) {
             }
         })
 
-        if(!eventInformation){
+        if (!eventInformation) {
             const error = new Error("Event information not found")
-            error.code = 401
+            error.code = 404
             throw error
         }
 
@@ -201,7 +201,7 @@ exports.sh_create_event_members_controller = async function (req, res, next) {
             }
         })
 
-        if(!customerInformation){
+        if (!customerInformation) {
             const error = new Error("Customer information not found")
             error.code = 401
             throw error
@@ -237,23 +237,185 @@ exports.sh_create_event_members_controller = async function (req, res, next) {
     }
 }
 
-exports.sh_invite_member_controller = async (req, res, next) => {
-    const { sh_member_id } = req.body;
+exports.sh_update_event_information_controller = async function (req, res, next) {
+    const { sh_event_id } = req.params;
+    const {
+        sh_event_name,
+        sh_event_description,
+        sh_event_capacity,
+        sh_event_status,
+        sh_event_dress_code,
+        sh_event_start_date,
+        sh_event_start_time,
+        sh_event_end_date,
+        sh_event_end_time,
+    } = req.body;
 
     try {
-        if(!req.isAuth){
+        if (!req.isAuth) {
+            const error = new Error("Unauthorised access, login to continue")
+            error.code = 401
+            throw error;
+        }
+
+        const eventInformation = await prisma.Sh_Event_Master_Information.findFirst({
+            where: {
+                id: sh_event_id
+            }
+        })
+
+        if (!eventInformation) {
+            const error = new Error("Event information not found")
+            error.code = 404
+            throw error
+        }
+
+        const eventInformationUpdated = await prisma.Sh_Event_Master_Information.update({
+            where: {
+                id: sh_event_id
+            },
+            data: {
+                sh_event_name: sh_event_name,
+                sh_event_description: sh_event_description,
+                sh_event_capacity: sh_event_capacity,
+                sh_event_status: sh_event_status,
+                sh_event_dress_code: sh_event_dress_code,
+                sh_event_start_date: sh_event_start_date,
+                sh_event_start_time: sh_event_start_time,
+                sh_event_end_date: sh_event_end_date,
+                sh_event_end_time: sh_event_end_time,
+                sh_event_master_information_updated_at: new Date(),
+            }
+        })
+
+        res.status(200).json({
+            status: 200,
+            message: "Event information updated successfully",
+            ...eventInformationUpdated
+        })
+
+    } catch (error) {
+        res.json({ message: error.message, status: error.code })
+        next()
+    }
+}
+
+exports.sh_remove_event_controller = async function (req, res, next) {
+    const { sh_event_id } = req.params;
+
+    try {
+        if (!req.isAuth) {
+            const error = new Error("Unauthorised access, login to continue")
+            error.code = 401
+            throw error;
+        }
+
+        const eventInformation = await prisma.Sh_Event_Master_Information.findFirst({
+            where: {
+                id: sh_event_id
+            }
+        })
+
+        if (!eventInformation) {
+            const error = new Error("Event information not found")
+            error.code = 404
+            throw error
+        }
+
+        await prisma.Sh_Event_Master_Information.delete({
+            where: {
+                id: sh_event_id
+            }
+        })
+
+        res.status(200).json({
+            status: 200,
+            message: "Event information deleted successfully",
+        })
+
+    } catch (error) {
+        res.json({ message: error.message, status: error.code })
+        next();
+    }
+}
+
+exports.sh_get_event_members_controller = async function (req, res, next) {
+    const {
+        sh_event_id,
+    } = req.params;
+
+    try {
+        if (!req.isAuth) {
+            const error = new Error("Unauthorised access, login to continue")
+            error.code = 401
+            throw error;
+        }
+
+        const eventInformation = await prisma.Sh_Event_Master_Information.findFirst({
+            where: {
+                id: sh_event_id
+            }
+        })
+
+        if (!eventInformation) {
+            const error = new Error("Event information not found")
+            error.code = 404
+            throw error
+        }
+
+
+        const eventMembers = await prisma.Sh_Event_Members_Master_Information.findMany({
+            where: {
+                sh_event_master_information_Id: sh_event_id
+            }
+        })
+
+        res.status(200).json({
+            status: 200,
+            message: "Event members found successfully",
+            ...eventMembers
+        })
+
+    } catch (error) {
+        res.json({ message: error.message, status: error.code })
+        next();
+    }
+}
+
+exports.sh_invite_member_controller = async (req, res, next) => {
+    const { sh_customer_id, sh_event_id } = req.body;
+
+    try {
+        if (!req.isAuth) {
             const error = new Error("Unauthorised access, Login to continue")
             error.code = 401
             throw error
         }
 
-        const memberInformation = await prisma.Sh_Event_Members_Master_Information.findFirst({
+        const eventInformation = await prisma.Sh_Event_Master_Information.findFirst({
             where: {
-                id: sh_member_id
+                id: sh_event_id
             }
         })
 
-        if(!memberInformation){
+        if (!eventInformation) {
+            const error = new Error("Event information not found")
+            error.code = 404
+            throw error
+        }
+
+        const memberInformation = await prisma.Sh_Event_Members_Master_Information.findFirst({
+            where: {
+                sh_customer_master_information: {
+                    id: sh_customer_id
+                },
+                sh_event_master_information: {
+                    id: sh_event_id
+                }
+            }
+        })
+
+        if (!memberInformation) {
             const error = new Error("Member information not found")
             error.code = 401
             throw error
@@ -274,8 +436,96 @@ exports.sh_invite_member_controller = async (req, res, next) => {
             message: "Member invited successfully",
             ...inviteMember
         })
-        
+
     } catch (error) {
+        res.json({ message: error.message, status: error.code })
+        next();
+    }
+}
+
+exports.sh_get_customer_created_events_controller = async function (req, res, next){
+    const { sh_customer_id } = req.params;
+
+    try {
+        if (!req.isAuth) {
+            const error = new Error("Unauthorised access, Login to continue")
+            error.code = 401
+            throw error
+        }
+
+        const customerInformation = await prisma.Sh_Customer_Master_Information.findFirst({
+            where: {
+                id: sh_customer_id
+            }
+        })
+
+        if (!customerInformation) {
+            const error = new Error("Customer information not found")
+            error.code = 401
+            throw error
+        }
+
+        const customerEvents = await prisma.Sh_Event_Master_Information.findMany({
+            where: {
+                sh_customer_master_information: {
+                    id: sh_customer_id
+                }
+            },
+            include: {
+                sh_event_location_information: true
+            }
+        })
+
+        res.status(200).json({
+            status: 200,
+            message: "Customer events found successfully",
+            ...customerEvents
+        })
+    }
+    catch (error) {
+        res.json({ message: error.message, status: error.code })
+        next();
+    }
+}
+
+exports.sh_get_customer_invited_and_pending_events_controller = async function (req, res, next) {
+    const { sh_customer_id } = req.params;
+
+    try{
+        if (!req.isAuth) {
+            const error = new Error("Unauthorised access, Login to continue")
+            error.code = 401
+            throw error
+        }
+
+        const customerInformation = await prisma.Sh_Customer_Master_Information.findFirst({
+            where: {
+                id: sh_customer_id
+            }
+        })
+
+        if (!customerInformation) {
+            const error = new Error("Customer information not found")
+            error.code = 401
+            throw error
+        }
+
+        const events = await prisma.Sh_Event_Members_Master_Information.findMany({
+            where: {
+                sh_customer_master_information: {
+                    id: sh_customer_id
+                }
+            }
+        })
+
+        res.status(200).json({
+            status: 200,
+            message: "Customer events found successfully",
+            ...events
+        })
+
+    }
+    catch(error){
         res.json({ message: error.message, status: error.code })
         next();
     }
