# documentation/swagger_output.json
@@ -566,6 +566,60 @@
         }
       }
     },
+    "/sh_update_event_information/{sh_event_id}": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sh_event_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "sh_event_name": {
+                  "example": "any"
+                },
+                "sh_event_description": {
+                  "example": "any"
+                },
+                "sh_event_capacity": {
+                  "example": "any"
+                },
+                "sh_event_status": {
+                  "example": "any"
+                },
+                "sh_event_dress_code": {
+                  "example": "any"
+                },
+                "sh_event_start_date": {
+                  "example": "any"
+                },
+                "sh_event_start_time": {
+                  "example": "any"
+                },
+                "sh_event_end_date": {
+                  "example": "any"
+                },
+                "sh_event_end_time": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/sh_invite_member_information": {
       "patch": {
         "description": "",
@@ -576,11 +630,86 @@
             "schema": {
               "type": "object",
               "properties": {
-                "sh_member_id": {
+                "sh_customer_id": {
+                  "example": "any"
+                },
+                "sh_event_id": {
                   "example": "any"
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/sh_remove_event_information/{sh_event_id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sh_event_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/sh_get_event_members_information/{sh_event_id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sh_event_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/sh_get_customer_created_events_information/{sh_customer_id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sh_customer_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/sh_get_all_events_infomation_by_customer/{sh_customer_id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sh_customer_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
